--- a/example_usage_of_summarization.ipynb
+++ b/example_usage_of_summarization.ipynb
@@ -94,7 +94,7 @@
         "\n",
         "ঢাকা মহানগর এলাকার সড়কে ব্যাটারিচালিত অটোরিকশা চলাচল বন্ধে বা বিধিনিষেধ আরোপে নিষ্ক্রিয়তা কেন আইনগত কর্তৃত্ববহির্ভূত ঘোষণা করা হবে না, রুলে তা জানতে চাওয়া হয়। এসব অটোরিকশার ব্যাটারি চার্জের জন্য অবৈধ বিদ্যুৎ-সংযোগ বিচ্ছিন্ন করে যথাযথ আইনগত পদক্ষেপ নিতে কেন নির্দেশ দেওয়া হবে না, রুলে তা-ও জানতে চাওয়া হয়। স্বরাষ্ট্রসচিব, পুলিশের মহাপরিদর্শক, ঢাকার জেলা প্রশাসক, দুই সিটি করপোরেশনের প্রশাসক, মহানগর পুলিশ কমিশনারসহ বিবাদীদের চার সপ্তাহের মধ্যে রুলের জবাব দিতে বলা হয়।\n",
         "\"\"\"\n",
-        "summary = WGSS.get_Bengali_summary(input_document)\n",
+        "summary = WGSS.get_bengali_summary(input_document)\n",
         "print(summary)"
       ],
       "metadata": {
@@ -170,7 +170,7 @@
         "\n",
         "ট্রাইব্যুনালের প্রসিকিউটর আবদুল্লাহ আল নোমানও সংবাদ সম্মেলনে উপস্থিত ছিলেন।\n",
         "\"\"\"\n",
-        "summary = WGSS.get_Bengali_summary(input_document)\n",
+        "summary = WGSS.get_bengali_summary(input_document)\n",
         "print(summary)"
       ],
       "metadata": {
